# novajoin

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  MANIFEST.in  Makefile  README.md  README.rst  bindep.txt  freeipa.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  configuration.rst  faq.rst  index.rst  installation.rst
files/: api-paste.ini  cloud-config-novajoin.json  cloud-config.json  freeipa.json  ipaclient.conf.template  join-api-paste.ini  join.conf  join.conf.template  novajoin-config-generator.conf  novajoin-notify.service  novajoin-server.service  policy-generator.conf  setup-ipa-client.sh
man/: novajoin-install.1  novajoin-ipa-setup.1  novajoin-notify.1  novajoin-server.1
novajoin/: __init__.py  base.py  cache.py  config.py  configure_ipa.py  context.py  errors.py  exception.py  glance.py  hooks.py  ipa.py  join.py  keystone_client.py  middleware.py  notifications.py  nova.py  policy.py  test.py  util.py  wsgi.py
novajoin/middleware/: auth.py  config.py
novajoin/novajoin/tests/integration/: README  test_ipa.py
novajoin/tests/functional/: README  krb5.conf  test_cloudinit.py  test_enrollment.py  test_ipa_integration.py
novajoin/tests/unit/: __init__.py  fake_constants.py  test_service.py  test_util.py
novajoin/tests/unit/api/: fakes.py
novajoin/tests/unit/api/v1/: test_api.py
novajoin/tests/unit/notifications/: floatingip.update.end_associate.json  floatingip.update.end_disassociate.json  instance.create.end.json  instance.delete.end.json  instance.update.json  test_formats.py
playbooks/functional/: post.yaml  pre.yaml  run.yaml
roles/configure-freeipa/tasks/: main.yaml
roles/configure-novajoin/tasks/: main.yaml
roles/download-centos/tasks/: main.yaml
scripts/: ipa-setup.sh  join-notify.py  novajoin-install  novajoin-ipa-setup  novajoin-server
scripts/compat/: novajoin-ipa-setup
tools/: test-setup.sh
