[metadata]
name = novajoin
description = Nova integration to enroll IPA clients
author = Rob Crittenden
author_email = rcritten@redhat.com
homepage = https://github.com/rcritten/novajoin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Development Status :: 3 - Alpha

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/share/novajoin =
        files/cloud-config.json
        files/freeipa.json
        files/join.conf.template
    /etc/join = files/api-paste.ini
    /usr/sbin =
        scripts/novajoin-notify
        scripts/novajoin-server
        scripts/novajoin-install
    /usr/libexec = scripts/novajoin-ipa-setup
    /usr/share/man/man1 =
        man/novajoin-install.1
        man/novajoin-notify.1
        man/novajoin-server.1

packages =
    novajoin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
