[metadata]
name = novajoin
description-file =
    README.rst
license = Apache License, Version 2.0
summary = Nova integration to enroll IPA clients
author = Rob Crittenden
author_email = rcritten@redhat.com
home-page = https://github.com/openstack/novajoin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/share/novajoin =
        files/freeipa.json
        files/novajoin-notify.service
        files/novajoin-server.service
    /etc/novajoin =
        files/join-api-paste.ini
        files/cloud-config-novajoin.json
    /usr/libexec = scripts/compat/novajoin-ipa-setup
    /usr/share/man/man1 =
        man/novajoin-install.1
        man/novajoin-notify.1
        man/novajoin-server.1

packages =
    novajoin

scripts =
    scripts/novajoin-install
    scripts/novajoin-ipa-setup

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[entry_points]
oslo.config.opts =
    novajoin = novajoin.config:list_opts
    novajoin-auth = novajoin.keystone_client:list_keystoneauth_opts

oslo.config.opts.defaults =
    novajoin = novajoin.middleware.config:set_config_defaults

console_scripts =
    novajoin-server = novajoin.wsgi:main
    novajoin-notify = novajoin.notifications:main

oslo.policy.policies =
    novajoin = novajoin.policy:list_rules

oslo.policy.enforcer =
    novajoin = novajoin.policy:get_enforcer
